[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Rooms/Cutscene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Prefabs/ScreenShake.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/black.png" type="Texture" id=3]
[ext_resource path="res://Assets/Degrade.tres" type="Texture" id=4]
[ext_resource path="res://Scenes/Rooms/ClosingDoor.gd" type="Script" id=5]
[ext_resource path="res://Assets/Witchcraft_spr_sheets_V1_0.png" type="Texture" id=6]
[ext_resource path="res://Assets/my_wall.png" type="Texture" id=7]
[ext_resource path="res://Assets/mushy.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Prefabs/Gate.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 48.76 ), Vector2( 1, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 216 ), Vector2( 32, 240 ) ]
}

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=6]
0/name = "Witchcraft_spr_sheets_V1_0.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 446, 120, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Witchcraft_spr_sheets_V1_0.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 382, 120, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Witchcraft_spr_sheets_V1_0.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 414, 120, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "my_wall.png 3"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "mushy.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "mushy.png 5"
5/texture = ExtResource( 8 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "mushy.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 32, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0

[node name="Cutscene" type="Node2D"]
position = Vector2( 3.52859e-005, 0 )
script = ExtResource( 1 )
room_on_the_right = "res://Scenes/Rooms/Sala0.tscn"

[node name="ScreenShake" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 128, 128 )
scale = Vector2( 18, 18 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ClosingDoor" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 32, 240 )
scale = Vector2( 1, 1e-005 )
texture = ExtResource( 4 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 64, 1 )
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ClosingDoor"]
anims/close = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 128, 128 )
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 262135, 1, 0, 262136, -1073741823, 0, 262137, -1073741823, 0, 262138, -1073741823, 0, 262139, -1073741823, 0, 262140, -1073741823, 0, 262141, -1073741823, 0, 262142, -1073741823, 0, 262143, -1073741823, 0, 196608, -1073741823, 0, 196609, -1073741823, 0, 196610, -1073741823, 0, 196611, -1073741823, 0, 196612, -1073741823, 0, 196613, -1073741823, 0, 196614, -1073741823, 0, 196615, -1073741823, 0, 196616, -1073741823, 0, 327671, 1, 0, 393207, 1, 0, 458743, 1, 0, 524279, 1, 0, 524280, -1610612735, 0, 524281, -1610612735, 0, 524282, -1610612735, 0, 524283, -1610612735, 0, 524284, -1610612735, 0, 524285, -1610612735, 0, 524286, -1610612735, 0, 524287, -1610612735, 0, 458752, -1610612735, 0, 458753, -1610612735, 0, 458754, -1610612735, 0, 458755, -1610612735, 0, 458756, -1610612735, 0, 458757, -1610612735, 0, 458758, -1610612735, 0, 458759, -1610612735, 0 )

[node name="Gate" parent="TileMap" instance=ExtResource( 9 )]
position = Vector2( 120, 88 )

[node name="Player" parent="." instance=ExtResource( 10 )]
editor/display_folded = true
position = Vector2( 120, 224 )

[node name="Sprite" parent="Player" index="0"]
frame = 0
[connection signal="finished" from="ScreenShake/AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="body_entered" from="TileMap/Gate" to="." method="_on_Gate_body_entered"]

[editable path="ScreenShake"]

[editable path="Player"]
